--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -72,7 +72,7 @@
                     android:paddingRight="15dp"
                     android:text="@string/admin"
                     android:textColor="@color/colorTextLow"
-                    android:textColorHint="@color/GreenFirst"
+                    android:textColorHint="@color/colorTextLow"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
