--- a/app/src/main/res/layout/phieu_muon_item.xml
+++ b/app/src/main/res/layout/phieu_muon_item.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/welcome"
+    android:background="@color/lime_300"
     android:orientation="horizontal"
     >
     <LinearLayout
@@ -18,16 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Mã Phiếu"
                 android:layout_weight="0.5"
-                android:fontFamily="serif-monospace"
-                android:textColor="@color/GreenFirst"
-                android:textSize="20sp"
+                android:fontFamily="sans-serif-thin"
                 android:padding="8dp"
+                android:text="Mã Phiếu"
+                android:textColor="@color/GreenFirst"
                 android:textColorHint="@color/Green"
+                android:textSize="20sp"
                 android:textStyle="bold" />
             <TextView
 
@@ -36,7 +37,7 @@
                 android:text="Mã Phiếu Mượn"
                 android:id="@+id/tvMaPM"
                 android:layout_weight="0.8"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:padding="8dp"
@@ -53,7 +54,7 @@
                 android:text="Tên TV:"
                 android:layout_weight="0.5"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:textColorHint="@color/Green"
@@ -65,7 +66,7 @@
                 android:text="Tên Thành Viên"
                 android:id="@+id/tvTenTV1"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:textColorHint="@color/Green"
@@ -85,7 +86,7 @@
                 android:text="Tên Sách:"
                 android:layout_weight="0.5"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:textColorHint="@color/Green"
@@ -99,7 +100,7 @@
                 android:layout_weight="0.7"
                 android:layout_gravity="center_vertical"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:textColorHint="@color/Green"
@@ -117,7 +118,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:padding="8dp"
                 android:text="Trả Sách"
                 android:textColor="@color/GreenFirst"
@@ -137,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:textColorHint="@color/Green"
@@ -152,7 +153,7 @@
                 android:id="@+id/tvTienThue"
                 android:layout_weight="0.7"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:textColorHint="@color/Green"
@@ -170,7 +171,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:textColorHint="@color/Green"
@@ -183,7 +184,7 @@
                 android:id="@+id/tvNgayPM"
                 android:layout_weight="0.7"
                 android:padding="8dp"
-                android:fontFamily="serif-monospace"
+                android:fontFamily="sans-serif-thin"
                 android:textColor="@color/GreenFirst"
                 android:textSize="20sp"
                 android:layout_gravity="center_vertical"
