--- a/app/src/main/res/drawable-anydpi/ic_action_menu.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_menu.xml
@@ -6,6 +6,6 @@
     android:tint="#333333"
     android:alpha="0.6">
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="@android:color/black"
       android:pathData="M3,18h18v-2L3,16v2zM3,13h18v-2L3,11v2zM3,6v2h18L21,6L3,6z"/>
 </vector>
