--- a/app/src/main/res/drawable-anydpi/ic_action_top10.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_top10.xml
@@ -6,6 +6,6 @@
     android:tint="#333333"
     android:alpha="0.6">
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="@android:color/black"
       android:pathData="M8,11h3v10h2V11h3l-4,-4 -4,4zM4,3v2h16V3H4z"/>
 </vector>
