--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@drawable/welcome"
+            android:background="@drawable/background"
             android:fitsSystemWindows="true"
             android:id="@+id/navigationview"
             app:menu="@menu/draw"
